@@ -12,6 +12,9 @@
 			<trans-unit id="file_not_found" xml:space="preserve">
 				<source>Import file not found: %s</source>
 			</trans-unit>
+			<trans-unit id="file_not_found_reason" xml:space="preserve">
+				<source>Import file not found: %1$s (reason: %2$s)</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
