@@ -19,7 +19,7 @@
 	"version": "2.1.0",
 	"require": {
 		"typo3/cms-core": ">=7.6.0,<9.0",
-		"cobweb/svconnector": ">=3.1.0"
+		"cobweb/svconnector": ">=3.2.0"
 	},
 	"replace": {
 		"svconnector_csv": "self.version",
