@@ -1,3 +1,7 @@
+2018-01-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Used new FileUtility for reading files, resolves #3
+
 2017-11-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Fixed functional tests for TYPO3 CMS 8
